fix sort pictures v2, fix css cropper

--- a/matchaFront/src/app/profile/profile.component.scss
+++ b/matchaFront/src/app/profile/profile.component.scss
@@ -267,7 +267,7 @@
     z-index: 11;
 
     .cropper {
-      margin: 1rem 15%;
+      margin: 1rem 20%;
       margin-top: 3rem;
       max-width: 26rem;
       flex-wrap: wrap;
